--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "firebase": "^3.6.10",
     "handlebars": "^4.0.6",
+    "loadjs": "^3.4.0",
     "vue": "^2.1.10",
-    "vue-router": "^2.2.0"
+    "vue-router": "^2.2.0",
+    "vuefire": "^1.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
